src/test/deca/context/invalid/intermediaire2/elseif/08condition_floatLiteral.deca
// Description:
// Test de la condition du else if, que 1.1, un float literal ne marche pas.
//
// Resultats:
//  08condition_floatLiteral.deca:12:15:
//
// Historique:
//    crée le 10/06/2022
{
    if (3 < 2) {
        print("3 < 2");
    } else if (1.1){
        print("1.1");
    }
}